# restaurant-menu-bot

./: .env_sample  .gitignore  README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 81490171cf07_the_first_revision.py
core/: config.py
models/: database.py  model.py
routes/: api.py
