[tool.poetry]
name = "restaurant-menu-bot"
version = "0.1.0"
description = ""
authors = ["team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.2"
pydantic = "^2.7.1"
uvicorn = "^0.29.0"
loguru = "^0.7.2"
python-dotenv = "^1.0.1"
httpx = "^0.27.0"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.29"
requests = "^2.31.0"
pytest = "^8.1.1"
alembic = "^1.13.1"
wheel = "^0.43.0"
setuptools = "^69.5.1"
exceptiongroup = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
